--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.0",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.23",
     "expo-font": "~13.0.2",
     "expo-linking": "~7.0.3",
